--- a/.env
+++ b/.env
@@ -2,27 +2,27 @@ APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=RjDGDUgLldhZMVdcWMm5N7b2gtf2ktq2
 APP_DEBUG=true
-APP_URL=siaapigateway-production.up.railway.app
+APP_URL=https://api-gateway.railway.internal
 APP_TIMEZONE=UTC
 DB_SSL=true
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=metro.proxy.rlwy.net
-DB_PORT=58000
+DB_HOST=crossover.proxy.rlwy.net
+DB_PORT=32580
 DB_DATABASE=railway
 DB_USERNAME=root
-DB_PASSWORD=mwabRcLVgBILxjJEAuovzzTREaoeNoVC
+DB_PASSWORD=qLQjlbXACPuweFDPcIdUdPzUusfRbgRJ
 
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
-USERS1_SERVICE_BASE_URL=https://ddsbe1-production.up.railway.app
+USERS1_SERVICE_BASE_URL=https://web-production-032b.up.railway.app
 USERS1_SERVICE_SECRET=eiA6g1JDOfMedCw1jgCnV447dS4QeIZk
 
-USERS2_SERVICE_BASE_URL=https://ddsbe2-production.up.railway.app
+USERS2_SERVICE_BASE_URL=https://web-production-038a8.up.railway.app
 USERS2_SERVICE_SECRET=py2ZtvzPWXlVL8czmIbnEDfktcqvqyth
 
-GATEWAY_SECRET=mtF1T75XVIPr8P90Z9avXU0wIo6eEbqA
+GATEWAY_SECRET=uWOwIptevkaklF48tgviDsvNvTdlFL3m
